# delta-food-menu-agent

./: .env  .env.example  .gitignore  README.md  pyproject.toml  test_availability.py  test_code.ipynb  usage_example.py
src/agents/: menu_agent.py
src/client/: delta_client.py  oauth_manager.py
src/data/: ssr_codes.py
src/database/: connection_pool.py  flight_repository.py
src/frontend/: gradio_app.py
src/models/: menu.py  requests.py  responses.py
src/tools/: debug_tools.py  menu_tools.py
src/utils/: logging_config.py  utils.py
