[project]
name = "delta-menu-agent"
version = "0.1.0"
description = "Delta flight menu chat agent POC"
requires-python = ">=3.9"
dependencies = [
    "openai-agents>=0.1.0",
    "gradio>=4.44.0",
    "pydantic>=2.9.2",
    "httpx>=0.27.2",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
